# src_template

./: .gitignore  README.md  pyproject.toml  pytest.ini
.github/workflows/: pytest.yaml
src/: main.py
src/exceptions/: __init__.py  app_exceptions.py  base.py  handlers.py
src/logger/: __init__.py  setup.py
src/logger/logging_config/: basic.yaml
src/settings/: __init__.py  config.py  logger.py
tests/: conftest.py  test_exception.py  test_logger.py  test_settings.py
