[project]
name = "src-template2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langchain-openai>=1.0.0",
    "pydantic>=2.12.3",
    "pydantic-settings>=2.11.0",
    "pytest>=8.4.2",
    "pyyaml>=6.0.3",
    "types-pyyaml>=6.0.12.20250915",
]
